sandbox/output
MedicineClash.java:9: error: cannot find symbol
            .collect(Collectors.toSet());
                     ^
  symbol:   variable Collectors
  location: class MedicineClash
1 error
